# zerobox

./: .gitignore  Cargo.toml  README.md  UPSTREAM_VERSION  config.example.yaml  dist-workspace.toml  setup.sh  sync.sh
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  policy.rs  proxy.rs
cli/tests/: sandbox_e2e.rs
crates/zerobox-common/: Cargo.toml
crates/zerobox-common/src/: protocol.rs  types.rs
crates/zerobox-daemon/: Cargo.toml  config.yaml  zerobox.service
crates/zerobox-daemon/src/: cli.rs  config.rs  main.rs
crates/zerobox-daemon/src/api/: commands.rs  mod.rs  sandboxes.rs  snapshots.rs
crates/zerobox-daemon/src/guest/: mod.rs  vsock.rs
crates/zerobox-daemon/src/image/: ext4.rs  mod.rs  oci.rs  overlay.rs
crates/zerobox-daemon/src/manager/: firecracker.rs  jailer.rs  lifecycle.rs  mod.rs  process.rs
crates/zerobox-daemon/src/network/: bridge.rs  mod.rs  nat.rs  port_forward.rs  tap.rs
crates/zerobox-daemon/src/snapshot/: metadata.rs  mod.rs  store.rs
crates/zerobox-guest-agent/: Cargo.toml
crates/zerobox-guest-agent/src/: executor.rs  files.rs  health.rs  main.rs  shell.rs
images/: Dockerfile.base  Dockerfile.node24  Dockerfile.python313  build-rootfs.sh
kernels/: download-kernels.sh
sdk/typescript/: package.json  pnpm-lock.yaml  tsconfig.json
sdk/typescript/src/: client.ts  command.ts  index.ts  sandbox.ts  snapshot.ts  types.ts
setup/: common.sh  detect.sh  firecracker.sh  kernel.sh  lima.sh  rootfs.sh  service.sh
shims/core/: Cargo.toml
shims/core/src/: lib.rs
shims/git-utils/: Cargo.toml
shims/git-utils/src/: lib.rs
shims/network-proxy/: Cargo.toml
shims/network-proxy/src/: lib.rs
shims/rustls-provider/: Cargo.toml
shims/rustls-provider/src/: lib.rs
tests/integration/: helpers.rs  mod.rs  test_commands.rs  test_lifecycle.rs  test_networking.rs  test_snapshot.rs
